# vulkanalia_tutorial

./: Cargo.toml
src/: camera.rs  main.rs
src/drawing/: command_buffer.rs  frame_buffer.rs  mod.rs  render.rs
src/model/: model.rs
src/pipeline/: mod.rs  pipeline.rs
src/presentation/: mod.rs  swapchain.rs  window_surface.rs
src/setup/: device.rs  instance.rs  mod.rs
src/setup/device/: queue_families.rs
src/setup/instance/: debug.rs
src/texture/: image.rs  mod.rs  multisampling.rs
src/uniform/: descriptor.rs  mod.rs
src/vertex/: mod.rs  vertex.rs
